--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,6 +3,8 @@ version: "3.9"
 services:
   api:
     build: .
+    env_file:
+      - .env
     command: >
             sh -c "python manage.py migrate &&
                    python manage.py collectstatic --noinput &&
@@ -26,6 +28,8 @@ services:
 
   worker:
     build: .
+    env_file:
+      - .env
     command: celery -A django_web worker -c 4 -l info 
     volumes:
       - .:/code
@@ -34,6 +38,8 @@ services:
   
   scheduler:
     build: .
+    env_file:
+      - .env
     command: celery -A django_web beat
     volumes:
       - .:/code
